--- a/snips.html
+++ b/snips.html
@@ -81,6 +81,7 @@ gap:8px;
 <details>
 <summary>main</summary>
 <pre id="copyText" style="border: dotted;">
+<pre>perl -pi -e 's/\r\n/\n/g' input.file</pre>
 <pre>php -S [::]:1337</pre>
 <pre>start ms-cxh:localonly</pre>
 <pre>dir *.mp4 /b /a-d | find /c /v ""</pre>
