Update snips.html | ssh

--- a/snips.html
+++ b/snips.html
@@ -93,6 +93,7 @@ gap:8px;
 <pre>ls -fR $PWD/* # also does the job but is more sucky, files in subdirectories will have ': \n . ..' </pre>
 <pre>curl -O xyz </pre>
 <pre>ssh sv01.nty -p 2023 -l testing -i sshkey.private</pre>
+<pre>ssh -L 3391&colon;&lt;DEST&lowbar;IP&gt;&colon;&lt;DEST&lowbar;PORT&gt; -N -f user&commat;&lt;SSH&lowbar;SERVER&lowbar;IP&gt; -p 22&NewLine;</pre>
 <pre>crontab -e</pre>
 <pre>shell:appsfolder</pre>
 <pre>Get-Content -Path "c:\file.ps1" | Out-String | Invoke-Expression -ErrorAction SilentlyContinue</pre>
