--- a/snips.html
+++ b/snips.html
@@ -82,13 +82,52 @@ sha1sum_command = sha1sum</pre>
 </pre>
 </details>
 
+
+<details>
+<summary>windows</summary>
+<pre id="copyText" style="border: dotted;">
+<pre>start ms-cxh:localonly</pre>
+<pre>shell:appsfolder</pre>
+<pre>dir *.mp4 /b /a-d | find /c /v ""</pre>
+<pre>Get-Content -Path "c:\file.ps1" | Out-String | Invoke-Expression -ErrorAction SilentlyContinue</pre>
+<pre>Get-StartApps | Select-Object Name, AppID | Export-Csv -Path "shellappsfolder.csv" -NoTypeInformation</pre>
+<pre>$nproc = (Get-WmiObject -Class Win32_Processor).NumberOfLogicalProcessors</pre>
+<pre>%USERPROFILE%\bin</pre>
+<pre>rundll32.exe user32.dll,LockWorkStation</pre>
+<pre>taskkill /F /IM explorer.exe
+cd /d %userprofile%\AppData\Local
+attrib -h IconCache.db
+del IconCache.db
+start explorer.exe</pre>
+<pre>Get-ChildItem -Path "." -Filter "*.gif" -Recurse | ForEach-Object { $_.FullName -replace [regex]::Escape((Get-Location).Path + "\") } | Sort-Object</pre>
+<small>+delete:</small>
+<pre>find . -type d -name ".thumbnails" -exec rm -r {} \;</pre>
+<small>filetypes in folder counter</small>
+<pre>Get-ChildItem -Recurse | Group-Object Extension -NoElement</pre>
+<small>HEVC from OEM</small>
+<pre>ms-windows-store://pdp/?ProductId=9n4wgh0z6vhq</pre>
+<pre>netstat -tunlp</pre>
+<pre>Get-NetTCPConnection -LocalPort 3389</pre>
+<pre>netstat -anob</pre>
+<pre>%y%mo%d_%pn_%ra{10} SHAREX</pre>
+<pre>Get-ChildItem -Directory |
+  Select-Object Name,
+      @{Name='Size (MB)'; Expression = {
+          [math]::Round( (Get-ChildItem -Path $_.FullName -Recurse -File |
+              Measure-Object -Sum Length).Sum / 1MB, 2)
+      }} |
+  Sort-Object 'Size (MB)' -Descending |
+  Format-Table -AutoSize
+  </pre>
+<pre>Get-NetTcpConnection -State Listen | Select-Object LocalAddress,LocalPort| Sort-Object -Property LocalPort | Format-Table</pre>
+</pre>
+</details>
+
 <details>
 <summary>main</summary>
 <pre id="copyText" style="border: dotted;">
 <pre>perl -pi -e 's/\r\n/\n/g' input.file</pre>
 <pre>php -S [::]:1337</pre>
-<pre>start ms-cxh:localonly</pre>
-<pre>dir *.mp4 /b /a-d | find /c /v ""</pre>
 <pre>wget -e robots=off</pre>
 <pre>spn.sh -p 1 tree.txt</pre>
 <small># "wget -m" to file list. might want to edit out the place you ran this command (e.g. /home/user/temp/projectWA/some.website.com)</small>
@@ -98,6 +137,7 @@ sha1sum_command = sha1sum</pre>
 <pre>curl -O xyz </pre>
 <pre>ssh sv01.nty -p 2023 -l testing -i sshkey.private</pre>
 <pre>ssh -L 3391&colon;&lt;DEST&lowbar;IP&gt;&colon;&lt;DEST&lowbar;PORT&gt; -N -f user&commat;&lt;SSH&lowbar;SERVER&lowbar;IP&gt; -p 22&NewLine;</pre>
+<pre>ssh -ND 9999 username@ser.ver</pre>
 <pre>Host mytunnel
     HostName      SSH_SERVER_IP
     User          user
@@ -117,17 +157,6 @@ Match User tunneluser
     ForceCommand echo 'Port-forward only'; sleep 3600
 </pre>
 <pre>crontab -e</pre>
-<pre>shell:appsfolder</pre>
-<pre>Get-Content -Path "c:\file.ps1" | Out-String | Invoke-Expression -ErrorAction SilentlyContinue</pre>
-<pre>Get-StartApps | Select-Object Name, AppID | Export-Csv -Path "shellappsfolder.csv" -NoTypeInformation</pre>
-<pre>$nproc = (Get-WmiObject -Class Win32_Processor).NumberOfLogicalProcessors</pre>
-<pre>%USERPROFILE%\bin</pre>
-<pre>rundll32.exe user32.dll,LockWorkStation</pre>
-<pre>taskkill /F /IM explorer.exe
-cd /d %userprofile%\AppData\Local
-attrib -h IconCache.db
-del IconCache.db
-start explorer.exe</pre>
 </pre>
 </details>
 
@@ -188,18 +217,10 @@ rem ffmpeg -i %i -ar 22050 outdir\%i https://superuser.com/questions/912730/ffmp
 <small>search</small>
 <pre>find . -type d -name ".thumbnails"</pre>
 <pre>aria2c --file-allocation=none</pre>
-<pre>Get-ChildItem -Path "." -Filter "*.gif" -Recurse | ForEach-Object { $_.FullName -replace [regex]::Escape((Get-Location).Path + "\") } | Sort-Object</pre>
-<small>+delete:</small>
-<pre>find . -type d -name ".thumbnails" -exec rm -r {} \;</pre>
-<small>filetypes in folder counter</small>
-<pre>Get-ChildItem -Recurse | Group-Object Extension -NoElement</pre>
-<small>HEVC from OEM</small>
-<pre>ms-windows-store://pdp/?ProductId=9n4wgh0z6vhq</pre>
 <small>AD</small>
 <pre>(Get-ADUser -filter *).count</pre>
 <pre>(Get-ADUser -filter * |Where {$_.enabled -eq "True"}).count</pre>
 <pre>(Get-ADGroupMember -Identity "IT Users").count</pre>
-<pre>Get-NetTcpConnection -State Listen | Select-Object LocalAddress,LocalPort| Sort-Object -Property LocalPort | Format-Table</pre>
 <small>ARCHIVE WHOLE SITE</small>
 <pre>wget -r -np -k</pre>
 <pre>wget --recursive --page-requisites --convert-links --no-parent -e robots=off --random-wait -w 20 -nc www.website.local</pre>
@@ -208,19 +229,6 @@ rem ffmpeg -i %i -ar 22050 outdir\%i https://superuser.com/questions/912730/ffmp
 <pre>Get-ChildItem -Path "www.website.local" -Recurse | ForEach-Object { $_.FullName }</pre>
 <pre>Get-ChildItem -Path "www.website.local" -Filter *.html -Recurse | Select-Object -ExpandProperty FullName</pre>
 <pre>bash spn.sh -p 1 -w 60 links.txt</pre>
-<pre>netstat -tunlp</pre>
-<pre>Get-NetTCPConnection -LocalPort 3389</pre>
-<pre>netstat -anob</pre>
-<pre>%y%mo%d_%pn_%ra{10} SHAREX</pre>
-<pre>Get-ChildItem -Directory |
-  Select-Object Name,
-      @{Name='Size (MB)'; Expression = {
-          [math]::Round( (Get-ChildItem -Path $_.FullName -Recurse -File |
-              Measure-Object -Sum Length).Sum / 1MB, 2)
-      }} |
-  Sort-Object 'Size (MB)' -Descending |
-  Format-Table -AutoSize
-  </pre>
 </pre>
 </details>
 
