--- a/snips.html
+++ b/snips.html
@@ -49,6 +49,7 @@ gap:8px;
 <pre>--b2-download-url  --b2-disable-checksum</pre>
 <pre>--fast-list --transfers 3 --checkers 6</pre>
 <pre>bunny --inplace</pre>
+<pre>drive --drive-acknowledge-abuse --drive-use-trash=false</pre>
 <pre>rclone lsd --http-url https://beta.rclone.org :http:</pre>
 <pre>--multi-thread-streams=0</pre>
 <pre>rclone serve webdav --addr :8080 .</pre>
