--- a/snips.html
+++ b/snips.html
@@ -267,6 +267,7 @@ Replace: <pre>S$2E$3 $1 $4</pre></b>
   <summary>linux</summary>
   <pre id="copyText" style="border: dotted;">
   <pre>sudo EDITOR=nano crontab -e</pre>
+  <pre>ss -tuln</pre>
   <pre>tmux attach -t 0</pre>
   <pre>tmux kill-ses -t startupSRV</pre>
 	  <pre>rclone copy \
@@ -463,3 +464,4 @@ details > pre {
 </style>
 
 </body></html>
+
