--- a/snips.html
+++ b/snips.html
@@ -300,6 +300,16 @@ FallbackNTP=0.pool.ntp.org 1.pool.ntp.org
 </details>
 
 <details>
+<summary>android</summary>
+<pre id="copyText" style="border: dotted;">
+<pre>adb pair ip:40563</pre>
+<pre>adb connect ip:40563</pre>
+<pre>adb shell cmd device_config put privacy camera_mic_icons_enabled false default</pre>
+<pre>adb shell cmd device_config set_sync_disabled_for_tests persistent</pre>
+</pre>
+</details>
+	
+<details>
 <summary>js - allow pasting</summary>
 <pre id="copyText" style="border: dotted;">
 <pre>var sleep = (milliseconds) => {
@@ -464,4 +474,5 @@ details > pre {
 </style>
 
 </body></html>
+
 
