--- a/snips.html
+++ b/snips.html
@@ -309,6 +309,13 @@ FallbackNTP=0.pool.ntp.org 1.pool.ntp.org
 <pre>adb shell cmd device_config set_sync_disabled_for_tests persistent</pre>
 </pre>
 </details>
+
+<details>
+<summary>GOOLAG</summary>
+<pre id="copyText" style="border: dotted;">
+<pre>||accounts.google.com/gsi/*$xhr,script,3p</pre>
+</pre>
+</details>
 	
 <details>
 <summary>js - allow pasting</summary>
@@ -475,6 +482,7 @@ details > pre {
 </style>
 
 </body></html>
+
 
 
 
