--- a/snips.html
+++ b/snips.html
@@ -268,6 +268,7 @@ Replace: <pre>S$2E$3 $1 $4</pre></b>
   <summary>linux</summary>
   <pre id="copyText" style="border: dotted;">
   <pre>sudo EDITOR=nano crontab -e</pre>
+  <pre>ln -s \~/Downloads \~/downloads</pre>
   <pre>ss -tuln</pre>
   <pre>tmux attach -t 0</pre>
   <pre>tmux kill-ses -t startupSRV</pre>
@@ -482,6 +483,7 @@ details > pre {
 </style>
 
 </body></html>
+
 
 
 
