--- a/snips.html
+++ b/snips.html
@@ -304,6 +304,7 @@ FallbackNTP=0.pool.ntp.org 1.pool.ntp.org
     <pre>lsusb -v -d 0bda:8176</pre>
     <pre>dmesg --follow</pre>
     <pre>udevadm monitor --subsystem-match=usb</pre>
+    <pre>nmap -T4 -A -v -Pn </pre>
     <pre>nmap -p- target_ip</pre>
     <pre>nmap -p- -T4 target_ip</pre>
     <pre>nmap -T4 -A -v</pre>
