--- a/snips.html
+++ b/snips.html
@@ -95,6 +95,7 @@ sha1sum_command = sha1sum</pre>
 <pre>start ms-cxh:localonly</pre>
 <pre>shell:appsfolder</pre>
 <pre>Get-WmiObject win32_physicalmemory | Format-Table Manufacturer,Banklabel,Configuredclockspeed,Devicelocator,Capacity,Serialnumber -autosize</pre>
+<pre>Get-WmiObject win32_bios | select Serialnumber</pre>  
 <pre>dir *.mp4 /b /a-d | find /c /v ""</pre>
 <pre>Get-Content -Path "c:\file.ps1" | Out-String | Invoke-Expression -ErrorAction SilentlyContinue</pre>
 <pre>Get-StartApps | Select-Object Name, AppID | Export-Csv -Path "shellappsfolder.csv" -NoTypeInformation</pre>
@@ -117,6 +118,7 @@ start explorer.exe</pre>
 <pre>ms-windows-store://pdp/?ProductId=9NBLGGH4NNS1</pre>
 <small>HEVC from OEM</small>
 <pre>ms-windows-store://pdp/?ProductId=9n4wgh0z6vhq</pre>
+<pre>Get-AppxPackage -allusers Microsoft.XboxGamingOverlay | Foreach {Add-AppxPackage -DisableDevelopmentMode -Register "$($_.InstallLocation)\AppXManifest.xml"}</pre>
 <pre>netstat -tunlp</pre>
 <pre>Get-NetTCPConnection -LocalPort 3389</pre>
 <pre>netstat -anob</pre>
