--- a/snips.html
+++ b/snips.html
@@ -108,6 +108,8 @@ sha1sum_command = sha1sum</pre>
 <pre id="copyText" style="border: dotted;">
 <pre>start ms-cxh:localonly</pre>
 <pre>shell:appsfolder</pre>
+<pre>manage-bde -status C:</pre>
+<pre>manage-bde -off C:</pre>
 <pre>Set-VMProcessor -VMName VMNAME -ExposeVirtualizationExtensions $true</pre>
 <pre>Get-WmiObject win32_physicalmemory | Format-Table Manufacturer,Banklabel,Configuredclockspeed,Devicelocator,Capacity,Serialnumber -autosize</pre>
 <pre>Get-WmiObject win32_bios | select Serialnumber</pre>
