--- a/snips.html
+++ b/snips.html
@@ -37,6 +37,7 @@ gap:8px;
 <pre>--add-metadata --concurrent-fragments 20  --merge-output-format mp4 --embed-thumbnail --embed-metadata --write-info-json --clean-infojson --write-comments --write-subs --sub-lang all --sub-format srt --write-description --write-thumbnail</pre>
 <pre>yt-dlp ytarchive:[videoID]</pre>
 <pre>yt-dlp --flat-playlist --print id</pre>
+<pre>--playlist-reverse </pre>
 <pre>-o %(title).200B.%(ext)s</pre>
 <b>count files by info.json</b>
 <pre>&lpar;Get-ChildItem -File &apos;&ast;&period;info&period;json&apos; &verbar; Where-Object &lcub; &dollar;&lowbar;&period;Name -match &apos;&Hat;&lpar;&quest;&lt;name&gt;&period;&ast;&rpar;&bsol;s&bsol;&lsqb;&lpar;&quest;&lt;id&gt;&lsqb;&Hat;&rsqb;&rsqb;&plus;&rpar;&bsol;&rsqb;&bsol;&period;info&bsol;&period;json&dollar;&apos; &rcub;&rpar;&period;Count&NewLine;</pre>
