make windows act like linux for file workflows (disable defender and keep it off)

--- a/snips.html
+++ b/snips.html
@@ -107,6 +107,7 @@ sha1sum_command = sha1sum</pre>
 <details>
 <summary>windows</summary>
 <pre id="copyText" style="border: dotted;">
+<pre>https://github.com/es3n1n/defendnot</pre>
 <pre>start ms-cxh:localonly</pre>
 <pre>shell:appsfolder</pre>
 <pre>manage-bde -status C:</pre>
