--- a/snips.html
+++ b/snips.html
@@ -327,6 +327,12 @@ NTP=0.asia.pool.ntp.org 1.asia.pool.ntp.org
 FallbackNTP=0.pool.ntp.org 1.pool.ntp.org
     </pre>
     <pre>timedatectl set-timezone Europe/Vilnius && mysql_tzinfo_to_sql /usr/share/zoneinfo | mysql -u root -p mysql</pre>
+	<pre>sudo mysql -u root -p
+CREATE USER 'mmdb_app'@'localhost' IDENTIFIED BY 'mmdb_password';
+CREATE DATABASE mmdb_db CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;
+GRANT ALL PRIVILEGES ON mmdb_db.* TO 'mmdb_app'@'localhost';
+FLUSH PRIVILEGES;
+exit</pre>
     <pre>sudo timedatectl set-ntp on && sudo systemctl restart systemd-timesyncd</pre>
     <pre>powertop --auto-tune</pre>
     <pre>usb-devices</pre>
