--- a/snips.html
+++ b/snips.html
@@ -153,6 +153,17 @@ start explorer.exe</pre>
   Format-Table -AutoSize
   </pre>
 <pre>Get-NetTcpConnection -State Listen | Select-Object LocalAddress,LocalPort| Sort-Object -Property LocalPort | Format-Table</pre>
+<pre># port forward
+netsh interface portproxy add v4tov4 listenaddress=0.0.0.0 listenport=8000 connectaddress=127.0.0.1 connectport=8000
+# firewall
+netsh advfirewall firewall add rule name="PHP 8000" dir=in action=allow protocol=tcp localport=8000
+
+#undo
+netsh interface portproxy delete v4tov4 listenaddress=0.0.0.0 listenport=8000
+netsh advfirewall firewall delete rule name="PHP 8000"
+
+#current port forwards
+netsh interface portproxy show all</pre>
 </pre>
 </details>
 
@@ -358,6 +369,8 @@ systemctl restart php8.2-fpm</pre>
     <pre>nmap -p- -T4 target_ip</pre>
     <pre>nmap -T4 -A -v</pre>
     <pre>nmap -A -Pn</pre>
+    <pre>sudo visudo -f /etc/sudoers.d/YourUser123</pre>
+    <pre>YourUser123 ALL=(ALL) NOPASSWD:ALL</pre>
 	<pre># set PATH so it includes user's private bin if it exists
 if [ -d "$HOME/bin" ] ; then
     PATH="$HOME/bin:$PATH"
@@ -384,6 +397,13 @@ fi</pre>
 <summary>GOOLAG</summary>
 <pre id="copyText" style="border: dotted;">
 <pre>||accounts.google.com/gsi/*$xhr,script,3p</pre>
+<pre>if ('serviceWorker' in navigator) {
+  caches.keys().then(function(cacheNames) {
+    cacheNames.forEach(function(cacheName) {
+      caches.delete(cacheName);
+    });
+  });
+}</pre>
 </pre>
 </details>
 	
